Feat/put users (#8)
* feat(UserRest&SaveUser) : added to our controlle

* feat(UserService) : created and glob 3 methods(save , create , update)

* feat(UserController)&&fix(UserService&&&UserRepository) : controller created with 3 endpoints and UserService updated for adding 2 methods(findAll and findById)

* feat(api.yml) : updated for the new endpoints

* style(format.sh)
