# src/main/java/school/hei/demo/endpoint/rest/exception/UnauthorizedException.java
@@ -1,0 +1,9 @@
+package school.hei.demo.endpoint.rest.exception;
+
+import org.springframework.http.HttpStatus;
+
+public class UnauthorizedException extends ApiException {
+  public UnauthorizedException(String message) {
+    super(HttpStatus.UNAUTHORIZED, message);
+  }
+}
